# racer-cpp-ray-tracer

./: .gitignore  CMakeLists.txt  LICENSE  README.md  imgui.ini  resources.rc
assets/logo/: racer-icon.xcf  racer-logo.xcf
release/: cube.fbx  imgui.ini  monkey.fbx  start-up.json  unit-plane.fbx
source/: main.cc  main.cpp
source/application/: application-ui.cc  application-ui.h  application.cc  application.h  imgui.ini  window.cc  window.h
source/common/: application.hpp  ray.hpp
source/common/ecs/: component.hpp  entity.hpp  scene.hpp  test.ppm
source/common/ecs/components/: transform.hpp
source/common/preview-system/: online-render-system.hpp  preview-structs.hpp  primitive-model.hpp
source/common/preview-system/primitive-shapes/: cube-preview-data.hpp  sphere-preview-data.hpp
source/common/preview-system/shader/: shader-files.hpp  shader.hpp
source/common/primitive-shapes/: aabb-shape.h  triangle-shape.h
source/common/render/: camera.hpp  light.hpp  mesh.h  model.h
source/common/render/components/: camera.hpp  light.hpp
source/common/render/structs/: material.hpp
source/common/render/systems/: offline-render-system.hpp
source/common/shapes/: shape.hpp  sphere-shape.hpp
source/common/shapes/sphere/: sphere-shape.cpp  sphere-shape.hpp
source/common/utilities/graphics/: intersection-data.hpp
source/common/utilities/window/: screen.hpp
source/data/: component.h  entity.cc  entity.h  entity.hpp  scene.cc  scene.h
source/data/components/: camera.cc  camera.h  light.h  transform.cc  transform.h  transform.hpp
source/data/components/renderer/: material.h  model-renderer.cc  model-renderer.h  renderer-component.cc  renderer-component.h  sphere-renderer.cc  sphere-renderer.h  triangle-renderer.cc  triangle-renderer.h
source/io/: scene-importer.cc  scene-importer.h
source/systems/ray-tracing-renderer/: ray-tracing-renderer.cc  ray-tracing-renderer.h
source/systems/ray-tracing-renderer/utils/: intersection-data.h
source/systems/real-time-renderer/: real-time-renderer.cc  real-time-renderer.h
source/systems/real-time-renderer/utils/: mesh.h  primitive-model.h
source/systems/real-time-renderer/utils/primitive-shapes/: cube-preview-data.h  sphere-preview-data.h  triangle-preview-data.h
source/systems/real-time-renderer/utils/shader/: shader-files.h  shader.h
tests/: file.json  start-up.json
tests/ImgPlane/: testImgPlane.txt
tests/ambient/: testAmbient.ppm  testAmbient.txt
tests/background/: testBackground.ppm  testBackground.txt
tests/behind/: testBehind.ppm  testBehind.txt
tests/diffuse/: testDiffuse.ppm  testDiffuse.txt
tests/illum/: testIllum.ppm  testIllum.txt
tests/intersection/: testIntersection.ppm  testIntersection.txt
tests/reflection/: testReflection.ppm  testReflection.txt
tests/sample/: testSample.ppm  testSample.txt
tests/shadow/: testShadow.ppm  testShadow.txt
tests/specular/: testSpecular.ppm  testSpecular.txt
